--- a/nano_defconfig
+++ b/nano_defconfig
@@ -1,1 +1,12 @@
-
+BR2_x86_64=y
+BR2_TOOLCHAIN_BUILDROOT_MUSL=y
+BR2_SYSTEM_BIN_SH_BUSYBOX=y
+BR2_PACKAGE_BUSYBOX=y
+BR2_PACKAGE_ALSA_UTILS=y
+BR2_PACKAGE_XSERVER_XORG_SERVER=y
+BR2_PACKAGE_XSERVER_XORG_SERVER_KDRIVE=y
+BR2_PACKAGE_XSERVER_XORG_SERVER_KDRIVE_FBDEV=y
+BR2_PACKAGE_JWM=y
+BR2_TARGET_ROOTFS_CPIO=y
+BR2_TARGET_ROOTFS_CPIO_XZ=y
+BR2_ROOTFS_OVERLAY="board/nano_linux/rootfs-overlay"
