--- a/nano_defconfig
+++ b/nano_defconfig
@@ -10,3 +10,10 @@ BR2_PACKAGE_JWM=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_XZ=y
 BR2_ROOTFS_OVERLAY="board/nano_linux/rootfs-overlay"
+BR2_LINUX_KERNEL=y
+BR2_LINUX_KERNEL_CUSTOM_VERSION=y
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.18.140"
+BR2_LINUX_KERNEL_USE_DEFCONFIG=y
+BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
+BR2_TOOLCHAIN_BUILDROOT_GCC=y
+BR2_GCC_VERSION_9_x=y
