--- a/nano_defconfig
+++ b/nano_defconfig
@@ -17,3 +17,5 @@ BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
 BR2_TOOLCHAIN_BUILDROOT_GCC=y
 BR2_GCC_VERSION_9_x=y
+BR2_KERNEL_HEADERS_VERSION=y
+BR2_DEFAULT_KERNEL_HEADERS="3.18.140"
