--- a/nano_defconfig
+++ b/nano_defconfig
@@ -14,3 +14,6 @@ BR2_ROOTFS_OVERLAY="board/nano_linux/rootfs-overlay"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
+
+BR2_TARGET_ROOTFS_ISO9660=y
+BR2_TARGET_ROOTFS_ISO9660_GRUB2=y
