--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: nano-os-images
-          path: buildroot/output/images/
+          path: buildroot/output/images/*
