--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential wget cpio python3 unzip rsync bc libncurses-dev libelf-dev libssl-dev bison flex
+        run: sudo apt-get update && sudo apt-get install -y build-essential wget cpio python3 unzip rsync bc libncurses-dev libelf-dev libssl-dev bison flex xorriso mtools libisoburn-dev
       - name: Build
         run: |
           git clone --depth 1 --branch 2024.02 https://github.com/buildroot/buildroot.git
