--- a/nano_defconfig
+++ b/nano_defconfig
@@ -19,3 +19,5 @@ BR2_TARGET_ROOTFS_ISO9660=y
 BR2_TARGET_ROOTFS_ISO9660_GRUB2=y
 
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(TOPDIR)/../tiny.config"
+
+BR2_TARGET_ROOTFS_ISO9660_BOOT_MENU="$(TOPDIR)/board/pc/grub.cfg"
